--- a/NLog.config
+++ b/NLog.config
@@ -4,7 +4,7 @@
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false"
-      internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
+      internalLogLevel="Debug" internalLogFile="c:\temp\nlog-internal.log">
 
   <!-- optional, add some variables
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
@@ -17,6 +17,19 @@
    -->
   <targets>
 
+    <target name="target2" xsi:type="AsyncWrapper">
+      <target name ="target1" xsi:type="File"
+                  fileName="c:\temp\WRA_OPCHDA_FastLoadTest_log.txt" layout="${longdate}|${level:uppercase=true}|${logger}|${message}|${exception:format=tostring}"
+                  keepFileOpen="true"
+              deleteOldFileOnStartup="true"
+              maxArchiveFiles="1"
+              archiveAboveSize="50000000"/>
+
+    </target>
+
+    <target name ="target3" xsi:type="Console"
+                  layout="${longdate}|${level:uppercase=true}|${logger}|${message}"
+                  />
     <!--
     add your targets here
     See https://github.com/nlog/NLog/wiki/Targets for possible targets.
@@ -32,7 +45,8 @@
 
   <rules>
     <!-- add your logging rules here -->
-
+    <logger name="*" minlevel="Info" writeTo="target1" />
+    <logger name="*" minlevel="Info" writeTo="target3" />
     <!--
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
     <logger name="*" minlevel="Debug" writeTo="f" />
