--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FileHelpers" version="3.4.2" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net472" />
