--- a/packages.config
+++ b/packages.config
@@ -13,8 +13,9 @@
   <package id="NLog.Config" version="4.7.8" targetFramework="net472" />
   <package id="NLog.Extensions.Logging" version="1.7.1" targetFramework="net472" />
   <package id="NLog.Schema" version="4.7.8" targetFramework="net472" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.0" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="Tedd.RandomUtils" version="1.0.6" targetFramework="net472" />
 </packages>
